--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -29,24 +29,27 @@
 				</div>
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
-						<li>
+						<li class="nav-item dropdown">
 							<a data-toggle="modal" data-target="#myModal" href="#">
 								<i class="fa fa-user"></i>
 								admin
 							</a>
 						</li>
+
 						<li>
 							<div class="cart dropdown">
 								<a data-toggle="dropdown" href="/admin/registerAccount"><i
 										class="fa fa-shopping-cart"></i>Register</a>
 							</div>
 						</li>
+
 						<li>
 							<div class="cart dropdown">
 								<a data-toggle="dropdown" href="/login"><i
 										class="fa fa-right-from-bracket"></i>Logout</a>
 							</div>
 						</li>
+
 					</ul>
 				</div>
 				<div class="col-md-2">
