--- a/views/admin/registerAccount.hbs
+++ b/views/admin/registerAccount.hbs
@@ -5,57 +5,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet"
-        id="bootstrap-css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Register Account</title>
 </head>
 
 <body>
-    <form action="/admin/doAddAccount" method="post" class="form">
-        <fieldset>
-            <div id="legend">
-                <legend class="">Register</legend>
-            </div>
-            <div class="control-group">
-                <!-- Username -->
-                <label class="control-label" for="username">Username</label>
-                <div class="controls">
-                    <input type="text" id="username" name="username" placeholder="............." class="input-xlarge">                
+    <center>
+        <form action="/admin/doAddAccount" method="post" class="form">
+            <fieldset>
+                <div id="legend">
+                    <legend class="">Register</legend>
                 </div>
-            </div>
+                <div class="control-group">
+                    <!-- Username -->
+                    <label class="control-label" for="username">Username</label>
+                    <div class="controls">
+                        <input type="text" id="username" name="username" placeholder="............."
+                            class="input-xlarge">
+                    </div>
+                </div>
 
-            <div class="control-group">
-                <!-- E-mail -->
-                <label class="control-label" for="email">E-mail</label>
-                <div class="controls">
-                    <input type="text" id="email" name="email" placeholder="............." class="input-xlarge">
+                <div class="control-group">
+                    <!-- E-mail -->
+                    <label class="control-label" for="email">E-mail</label>
+                    <div class="controls">
+                        <input type="text" id="email" name="email" placeholder="............." class="input-xlarge">
+                    </div>
                 </div>
-            </div>
 
-            <div class="control-group">
-                <!-- Password-->
-                <label class="control-label" for="password">Password</label>
-                <div class="controls">
-                    <input type="password" id="password" name="password" placeholder="..........." class="input-xlarge">
+                <div class="control-group">
+                    <!-- Password-->
+                    <label class="control-label" for="password">Password</label>
+                    <div class="controls">
+                        <input type="password" id="password" name="password" placeholder="..........."
+                            class="input-xlarge">
+                    </div>
                 </div>
-            </div>
 
-            <div class="control-group">
-                <!-- Password -->
-                <label class="control-label" for="education">Education</label>
-                <div class="controls">
-                    <input type="text" name="Education" placeholder="............."
-                        class="input-xlarge">
+                <div class="control-group">
+                    <!-- Password -->
+                    <label class="control-label" for="education">Education</label>
+                    <div class="controls">
+                        <input type="text" name="education" placeholder="............." class="input-xlarge">
+                    </div>
                 </div>
-            </div>
-            <div class="control-group">
-                <!-- Button -->
-                <div class="controls">
-                    <input type="submit" class="form-submit" value="Register">
+                <div class="control-group">
+                    <!-- Button -->
+                    <div class="controls">
+                        <input type="submit" class="form-submit" value="Register">
+                    </div>
                 </div>
-            </div>
-        </fieldset>
-    </form>
+            </fieldset>
+        </form>
+    </center>
 </body>
 
 </html>
