--- a/views/customer/customerPage.hbs
+++ b/views/customer/customerPage.hbs
@@ -42,6 +42,18 @@
 		</div>	
 	</section>  <!-- End of /Section -->
 
+
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="block">
+    <ul class="nav navbar-nav nav-main">
+      <li><a href="/customer/updateProfile">Update Profile</a></li>
+      <li><a href="#">Manager Account</a></li>
+      <li><a href="#">Change Password</a></li>
+    </ul> <!-- End of /.nav-main -->
+    </div>
+  </div>
+
+
   <!-- FEATURES Start
     ================================================== -->
 
