--- a/views/customer/orderDetail.hbs
+++ b/views/customer/orderDetail.hbs
@@ -29,6 +29,7 @@
                                 <tr>
                                     <td><img src="../{{img}}" /> </td>
                                     <td>{{name}}</td>
+                                    <td>{{quantity}}</td>
                                     <td class="text-right">{{price}}</td>
                                     <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
                                 </tr>
@@ -48,7 +49,7 @@
                 <div class="col mb-2">
                     <div class="row">
                         <div class="col-sm-12  col-md-6">
-                            <button class="btn btn-block btn-light">Continue Shopping</button>
+                            <button href="/customer/customerPage" class="btn btn-block btn-light">Continue Shopping</button>
                         </div>
                         <div class="col-sm-12 col-md-6 text-right">
                             <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
