--- a/views/admin/adminBookDetail.hbs
+++ b/views/admin/adminBookDetail.hbs
@@ -53,7 +53,7 @@
                             <td class="text-center align-middle">
                                 <div class="btn-group align-top">
                                     <a href="/admin/adminAddBook?id={{bookDetail.id}}" class="btn btn-primary">
-                                        <span class="glyphicon glyphicon-edit"></span>
+                                        <span class="glyphicon glyphicon-add"></span>
                                         <span><strong>Add</strong></span>
                                     </a>
                                 </div>
@@ -70,12 +70,21 @@
 
                         <form action="/admin/doDeleteBook" method="post">
                             <div class="btn-group align-top">
-                                <a href="/admin/doDeleteBook?id={{bookDetail.id}}" class="btn btn-danger">
-                                    <span class="glyphicon glyphicon-edit"></span>
+                                <a href="/admin/doDeleteBook?id={{bookDetail.id}}"
+                                    onclick="return confirm('Are you sure to delete this book?')"
+                                    class="btn btn-danger">
+                                    <span class="glyphicon glyphicon-remove"></span>
                                     <span><strong>Delete</strong></span>
                                 </a>
                             </div>
                         </form>
+
+                        <div class="btn-group align-top">
+                            <a href="/admin" class="btn btn-info">
+                                <span class="glyphicon glyphicon-remove"></span>
+                                <span><strong>BackHome</strong></span>
+                            </a>
+                        </div>
 
                         </td>
                     </div>
