--- a/views/customer/orderDetail.hbs
+++ b/views/customer/orderDetail.hbs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     {{> head}}
-    {{> customerHeader}}
 <body>
         <section class="jumbotron text-center">
             <div class="container">
@@ -49,7 +48,7 @@
                 <div class="col mb-2">
                     <div class="row">
                         <div class="col-sm-12  col-md-6">
-                            <button href="/customer/customerPage" class="btn btn-block btn-light">Continue Shopping</button>
+                            <button href="/customer" class="btn btn-block btn-light">Continue Shopping</button>
                         </div>
                         <div class="col-sm-12 col-md-6 text-right">
                             <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
@@ -58,7 +57,5 @@
                 </div>
             </div>
         </div>
-
-        {{> footer}}
 </body>
 </html>
