--- a/views/admin/adminPage.hbs
+++ b/views/admin/adminPage.hbs
@@ -11,6 +11,8 @@
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 
 
   <!-- Css -->
@@ -116,8 +118,8 @@
               <h2>Manager Book</h2>
             </div>
 
-            {{#each listBook}}
             <div class="row">
+            {{#each listBook}}
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <a class="catagotie-head" href="/admin/adminBookDetail?id={{id}}">
