--- a/views/customer/customerPage.hbs
+++ b/views/customer/customerPage.hbs
@@ -10,6 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
   <!-- Css -->
@@ -115,8 +116,8 @@
               <h2>Product Best Seller</h2>
             </div>
 
-            {{#each listBook}}
             <div class="row">
+            {{#each listBook}}
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <a class="catagotie-head" href="/customer/bookDetail?id={{id}}">
@@ -129,8 +130,8 @@
                 </div> <!-- End of /.thumbnail -->
               </div> <!-- End of /.col-sm-6 col-md-4 -->
             {{/each}}
-
             </div> <!-- End of /.row -->
+
           </div> <!-- End of /.block -->
         </div> <!-- End of /.col-md-12 -->
       </div> <!-- End of /.row -->
@@ -153,8 +154,8 @@
         </div>
       </div>
 
-      {{#each listBook}}
       <div class="row">
+      {{#each listBook}}
         <div class="col-md-3">
           <div class="products">
             <a href="/customer/bookDetail?id={{id}}">
@@ -169,46 +170,6 @@
           </div> <!-- End of /.products -->
         </div> <!-- End of /.col-md-3 -->
         {{/each}}
-
-        {{!-- <div class="col-md-3">
-          <div class="products">
-            <a href="/bookDetail">
-              <img src="images/shine4.jpg" alt="">
-            </a>
-            <a href="/bookDetail">
-              <h4> Shine cậu bé bút chì - tập 2</h4>
-            </a>
-            <p class="price">25.000VNĐ</p>
-            <a class="view-link shutter" href="#">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of Col-md-3 -->
-        <div class="col-md-3">
-          <div class="products">
-            <a href="/bookDetail">
-              <img src="images/shine1.jpg" alt="">
-            </a>
-            <a href="/bookDetail">
-              <h4>Shine cậu bé bút chì - tập 3</h4>
-            </a>
-            <p class="price">30.000VNĐ</p>
-            <a class="view-link shutter" href="#">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of /.Col-md-3 -->
-        <div class="col-md-3">
-          <div class="products">
-            <a href="/bookDetail">
-              <img src="images/shine2.jpg" alt="">
-            </a>
-            <a href="/bookDetail">
-              <h4>Shine cậu bé bút chì - tập 4</h4>
-            </a>
-            <p class="price">35.000VNĐ</p>
-            <a class="view-link shutter" href="#">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of /.Col-md-3 -->
       </div> <!-- End of /.row -->
     </div> <!-- End of /.container --> --}}
   </section> <!-- End of Section -->
