--- a/views/customer/orderDetail.hbs
+++ b/views/customer/orderDetail.hbs
@@ -30,7 +30,7 @@
                                     <td>{{name}}</td>
                                     <td>{{quantity}}</td>
                                     <td class="text-right">{{price}}</td>
-                                    <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
+                                    <td class="text-right"><a class="btn btn-danger"href="/customer/getRemoveFromCart?id={{_id}}"><i class="fa fa-trash"></i></a>  </td>
                                 </tr>
                                 {{/each}}
 
@@ -39,7 +39,7 @@
                                     <td></td>
                                     <td></td>
                                     <td><strong>Total</strong></td>
-                                    <td class="text-right"><strong>346,90 €</strong></td>
+                                    <td class="text-right"><strong>{{totalPrice}} €</strong></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -48,7 +48,7 @@
                 <div class="col mb-2">
                     <div class="row">
                         <div class="col-sm-12  col-md-6">
-                            <button href="/customer" class="btn btn-block btn-light">Continue Shopping</button>
+                            <a href="/customer"class="btn btn-block btn-light"> Continue Shopping</a>
                         </div>
                         <div class="col-sm-12 col-md-6 text-right">
                             <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
