--- a/views/customer/customerPage.hbs
+++ b/views/customer/customerPage.hbs
@@ -165,8 +165,9 @@
               <h4> {{name}} </h4>
             </a>
             <p class="price">{{price}}VNĐ</p>
-            <a class="view-link shutter" href="/shoppingcart">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
+            {{!-- <a class="view-link shutter" href="/shoppingcart">
+              <i class="fa fa-plus-circle"></i>Add To Cart
+            </a> --}}
           </div> <!-- End of /.products -->
         </div> <!-- End of /.col-md-3 -->
         {{/each}}
