--- a/views/partials/customerHeader.hbs
+++ b/views/partials/customerHeader.hbs
@@ -28,7 +28,7 @@
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
 						<li>
-							<a data-toggle="modal" data-target="#myModal" href="#">
+							<a data-toggle="modal" data-target="#myModal" href="/customer/updateProfile">
 							<i class="fa fa-user"></i>
 								Customer
 							</a>
