--- a/views/login.hbs
+++ b/views/login.hbs
@@ -37,9 +37,8 @@
                     <div class="pt-1 mb-4">
                       <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                     </div>
-                    <a class="small text-muted" href="#!">Forgot password?</a>
-                    <a href="#!" class="small text-muted">Terms of use.</a>
-                    <a href="#!" class="small text-muted">Privacy policy</a>
+                    {{!-- <a class="small text-muted" href="#!">Forgot password?</a> --}}
+                    <a href="/" class="small text-muted text-right">Back Shop</a>
                   </form>
                 </div>
               </div>
