--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -8,14 +8,16 @@
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
 	<!-- Css -->
-	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="/css/nivo-slider.css" type="text/css" />
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/responsive.css">
 
 
 </head>
@@ -38,29 +40,26 @@
 
 						<li>
 							<div class="cart dropdown">
-								<a data-toggle="dropdown" href="/admin/registerAccount"><i
-										class="fa fa-shopping-cart"></i>Register</a>
-							</div>
-						</li>
-
-						<li>
-							<div class="cart dropdown">
 								<a data-toggle="dropdown" href="/login"><i
-										class="fa fa-right-from-bracket"></i>Logout</a>
+										class="fa-solid fa-right-from-bracket"></i>Logout</a>
 							</div>
 						</li>
 
 					</ul>
 				</div>
 				<div class="col-md-2">
-					<div class="search-box">
-						<div class="input-group">
-							<input placeholder="Search Here" type="text" class="form-control">
-							<span class="input-group-btn">
-								<button class="btn btn-default" type="button"></button>
-							</span>
-						</div><!-- /.input-group -->
-					</div><!-- /.search-box -->
+					<form class="form" method="post" action="/admin/doSearchBook" 
+					style="display: flex; margin-right: 9%;">
+						<div class="search-box">
+							<div class="input-group">
+								<input placeholder="Search Book Here" class="form-control rounded" 
+								type="search" name="keyword" aria-label="Search" aria-describedby="search-addon">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button"></button>
+								</span>
+							</div><!-- /.input-group -->
+						</div><!-- /.search-box -->
+					</form>
 				</div>
 			</div> <!-- End Of /.row -->
 		</div> <!-- End Of /.Container -->
