--- a/views/admin/adminEditCustomer.hbs
+++ b/views/admin/adminEditCustomer.hbs
@@ -15,11 +15,11 @@
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                         <img
                             class="rounded-circle mt-5" width="150px" height="200px"
-                            src="/uploads/trainees/{{listCustomer.img}}">
+                            src="../{{listCustomer.img}}">
                     </div>
                 </div>
                 <div class="col-md-8 border-right">
-                    <form class="form" method="POST" action="/admin/doEditCustomer">
+                    <form class="form" method="POST" action="/admin/doEditCustomer" enctype="multipart/form-data">
                         <div class="row">
                             <div class="col">
                                 <input type="hidden" name="id" value="{{listCustomer.id}}">
@@ -39,18 +39,18 @@
                         </div>
                         <div class="row">
                             <div class="col mb-3">
-                                <div class="col form-group">
-                                <label>Image</label>
-                                <input type="file" name="picture" id="picture" accept="image/*"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col mb-3">
                                 <div class="form-group">
                                     <label>Education</label>
                                     <input class="form-control" type="text" name="education"
                                         value="{{aTrainee.education}}" required />
                                 </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col mb-3">
+                                <div class="col form-group">
+                                <label>Image</label>                                
+                                <input type="file" name="image" id="picture" accept="image/*"/>
                             </div>
                         </div>
                         <div class="row">
