--- a/views/admin/adminViewCustomer.hbs
+++ b/views/admin/adminViewCustomer.hbs
@@ -16,7 +16,7 @@
                         <span class="glyphicon glyphicon-plus"></span>
                         <span><strong>Add new Customer</strong></span>
                     </a>
-                    <form class="form btn-group align-top" method="post" action="/searchTrainee" style="margin-left: 20%; width: 40%;  flex: none;">
+                    <form class="form btn-group align-top" method="post" action="/admin/doSearchCustomer" style="margin-left: 20%; width: 40%;  flex: none;">
                         <input type="search" name="keyword" class="form-control rounded" 
                             placeholder="Search by name (or day of birth)" aria-label="Search" aria-describedby="search-addon" />
                         <button type="submit" class="btn btn-success">Search</button>
@@ -38,7 +38,7 @@
                             <thead>
                                 <tr>
                                     <th class="max-width" style="text-align:center" >Name</th>
-                                    {{!-- <th class="max-width" style="text-align:center; width: 150px">Image</th> --}}
+                                    <th class="max-width" style="text-align:center; width: 150px">Image</th>
                                     <th class="max-width" style="text-align:center">Email</th>
                                     <th style="text-align:center">Education</th>
                                     <th style="text-align:center">Actions</th>
@@ -48,11 +48,11 @@
                                 {{#each listCustomer}}
                                 <tr>
                                     <td class="text-nowrap align-middle">{{name}}</td>
-                                    {{!-- <td class="text-nowrap align-middle">
+                                    <td class="text-nowrap align-middle">
                                         <center>
-                                            <img src="../{{img}}" alt="{{name}}" width="50px" height="70px">
+                                            <img src="../{{img}}" alt="{{name}}" width="100px" height="100px">
                                         </center>
-                                    </td> --}}
+                                    </td>
                                     <td class="text-nowrap align-middle">{{email}}</td>
                                     <td class="text-nowrap align-middle"><span>{{education}}</span></td>
                                     <td class="text-center align-middle">
@@ -68,7 +68,7 @@
                                             </a>
                                         </div>
                                     </td>
-                                </tr>
+                                </tr> 
                                {{/each}} 
                             </tbody>
                         </table>
