--- a/views/admin/adminEditCustomer.hbs
+++ b/views/admin/adminEditCustomer.hbs
@@ -42,7 +42,7 @@
                                 <div class="form-group">
                                     <label>Education</label>
                                     <input class="form-control" type="text" name="education"
-                                        value="{{aTrainee.education}}" required />
+                                        value="{{listCustomer.education}}" required />
                                 </div>
                             </div>
                         </div>
