--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,5 @@
 <header>
-    	
-	<section id="top">
+	<section id="top" padding="">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
