--- a/views/admin/adminAddCustomer.hbs
+++ b/views/admin/adminAddCustomer.hbs
@@ -18,7 +18,6 @@
                 </div>
                 <div class="col-md-8 border-right">
                     <form class="form" method="post" action="/admin/doAddCustomer" enctype="multipart/form-data">
-
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
@@ -53,7 +52,7 @@
                         <div class="row">
                             <div class="col d-flex justify-content-end">
                                 <button class="btn btn-primary" type="submit">Save</button>
-                                <a href="/admin/adminAddCustomer" class="btn btn-warning">Cancel</a>
+                                <a href="/admin/adminViewCustomer" class="btn btn-warning">Cancel</a>
                             </div>
                         </div>
                     </form>
