--- a/views/admin/registerAccount.hbs
+++ b/views/admin/registerAccount.hbs
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Register Account</title>
-</head>
 
-<body>
-    <center>
-        <form action="/admin/doAddAccount" method="post" class="form">
-            <fieldset>
-                <div id="legend">
-                    <legend class="">Register</legend>
-                </div>
-                <div class="control-group">
-                    <!-- Username -->
-                    <label class="control-label" for="username">Username</label>
-                    <div class="controls">
-                        <input type="text" id="username" name="username" placeholder="............."
-                            class="input-xlarge">
+<body class="sb-nav-fixed">
+    <div class="modal-dialog modal-lg" role="document" style="margin-top: 5%; margin-left: 20%">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Create a new Account </h2>
+            </div>
+            <div class="row">
+                <div class="col-md-3 border-right">
+                    <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                        <img class="rounded-circle mt-5" width="150px" src="/images/bookdefault.jpg">
                     </div>
                 </div>
-
-                <div class="control-group">
-                    <!-- E-mail -->
-                    <label class="control-label" for="email">E-mail</label>
-                    <div class="controls">
-                        <input type="text" id="email" name="email" placeholder="............." class="input-xlarge">
-                    </div>
+                <div class="col-md-8 border-right">
+                    <form class="form" method="post" action="/admin/doAddAccount">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Full Name</label>
+                                    <input class="form-control" type="text" name="name" placeholder="Full name"
+                                        required />
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input class="form-control" type="email" name="email" placeholder="user@example.com"
+                                        required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class=" col mb-3 form-group">
+                                    <label>Password</label>
+                                    <input class="form-control" type="text" name="password"
+                                        placeholder="12345678" required />
+                                </div>
+                        </div>
+                        <div class="row">
+                            <div class=" col mb-3 form-group">
+                                    <label>Education</label>
+                                    <input class="form-control" type="text" name="education"
+                                        placeholder="Greenwich University" required />
+                                </div>
+                        </div>
+                        <div class="row">
+                            <div class="col d-flex justify-content-end">
+                                <button class="btn btn-primary" type="submit">Save</button>
+                                <a href="/login" class="btn btn-warning">Cancel</a>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-
-                <div class="control-group">
-                    <!-- Password-->
-                    <label class="control-label" for="password">Password</label>
-                    <div class="controls">
-                        <input type="password" id="password" name="password" placeholder="..........."
-                            class="input-xlarge">
-                    </div>
-                </div>
-
-                <div class="control-group">
-                    <!-- Password -->
-                    <label class="control-label" for="education">Education</label>
-                    <div class="controls">
-                        <input type="text" name="education" placeholder="............." class="input-xlarge">
-                    </div>
-                </div>
-                <div class="control-group">
-                    <!-- Button -->
-                    <div class="controls">
-                        <input type="submit" class="form-submit" value="Register">
-                    </div>
-                </div>
-            </fieldset>
-        </form>
-    </center>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
