--- a/views/login.hbs
+++ b/views/login.hbs
@@ -37,7 +37,8 @@
                     <div class="pt-1 mb-4">
                       <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                     </div>
-                    {{!-- <a class="small text-muted" href="#!">Forgot password?</a> --}}
+                    <a class="small text-muted" href="/admin/registerAccount">Register</a>
+                    <br> <br>
                     <a href="/" class="small text-muted text-right">Back Shop</a>
                   </form>
                 </div>
