--- a/views/partials/customerHeader.hbs
+++ b/views/partials/customerHeader.hbs
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
   <!-- Css -->
@@ -48,14 +49,18 @@
 					</ul>
 				</div>
 				<div class="col-md-2">
-					<div class="search-box">
-						<div class="input-group">
-					    	<input placeholder="Search Here" type="text" class="form-control">
-					      	<span class="input-group-btn">
-					        	<button class="btn btn-default" type="button"></button>
-					      	</span>
-					    </div><!-- /.input-group -->
-					</div><!-- /.search-box -->
+					<form class="form" method="post" action="/customer/doSearchBook" 
+					style="display: flex; margin-right: 9%;">
+						<div class="search-box">
+							<div class="input-group">
+								<input placeholder="Search Book Here" class="form-control rounded" 
+								type="search" name="keyword" aria-label="Search" aria-describedby="search-addon">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button"></button>
+								</span>
+							</div><!-- /.input-group -->
+						</div><!-- /.search-box -->
+					</form>
 				</div>
 			</div> <!-- End Of /.row -->
 		</div>	<!-- End Of /.Container -->
