--- a/views/admin/adminAddCustomer.hbs
+++ b/views/admin/adminAddCustomer.hbs
@@ -42,6 +42,13 @@
                                 </div>
                         </div>
                          <div class="row">
+                             <div class="col mb-3">
+                                <div class="col form-group">
+                                    <label>Password</label>
+                                    <input type="text" name="password" class="form-control"
+                                    placeholder="*********" required />
+                                </div>
+                            </div>
                             <div class="col mb-3">
                                 <div class="col form-group">
                                     <label>Image</label>
