update search book

--- a/views/partials/customerHeader.hbs
+++ b/views/partials/customerHeader.hbs
@@ -11,11 +11,11 @@
 
 
   <!-- Css -->
-  <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="/css/nivo-slider.css" type="text/css" />
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/responsive.css">
 
 
 </head>
